refactor: rename packages and move tests
